--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculator App</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 <div class="api">
 </div>
 <section class="top-banner">
@@ -17,5 +27,9 @@
 </section>
 <footer class="page-footer">
   <div class="container">
+      <style> </style>
   </div>
 </footer>
+<script src="main.js"></script>
+</body>
+</html>
